--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,14 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: feed_engine
+  encoding: unicode
   pool: 5
-  timeout: 5000
+  username:
+  password:
+
+  # adapter: sqlite3
+  # database: db/production.sqlite3
+  # pool: 5
+  # timeout: 5000
